[package]
name = "chess-diff"
version = "0.1.0"
authors = ["Ruchir Khaitan <ruchir0001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bzip2 = "0.4"
pgn-reader = { git = "https://github.com/niklasf/rust-pgn-reader" }
timely = { git = "https://github.com/TimelyDataflow/timely-dataflow" }
differential-dataflow = { git = "https://github.com/TimelyDataflow/differential-dataflow" }
shakmaty = "0.16.4"
